# diffusion

./: CMakeLists.txt  Makefile  README.md  diffusion.md  docs.md  fpm.toml
.github/workflows/: test.yml
app/: main.f90
docs/: index.html  search.html
docs/lists/: files.html  modules.html  procedures.html
docs/module/: diffusion.html  mod_hdiff.html  mod_tool.html  mod_vdiff.html
docs/page/: dev.html  horizontal.html  index.html  summary.html  user.html  vertical.html
docs/proc/: cal_cfl_time_step.html  cal_kh_by_deformation_method.html  hdiff1d_by_k_theory.html  thomas_solver.html  vdiff_by_k_theory.html
docs/program/: main.html
docs/sourcefile/: diffusion.f90.html  main.f90.html  module_hdiff.f90.html  module_tool.f90.html  module_vdiff.f90.html
docs/src/: main.f90  module_hdiff.F90  module_tool.F90  module_vdiff.F90
docs/tipuesearch/: tipuesearch_content.js
pages/: dev.md  horizontal.md  index.md  summary.md  user.md  vertical.md
src/: diffusion.F90  module_vdiff.F90
test/: hdiff.f90  thomas_solver.f90  vdiff.f90
utils/: deps
